# shortcut

./: main.py  pyproject.toml
app/: firestore.py
