[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["joshua-schecker <jd.schecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
firebase-admin = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
